--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
+h1.title {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 900;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+
 /* Grid */
 .layout {
   /* Set your own grid   */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 400px;
-  grid-column-gap: 1em;
+  grid-column-gap: 10em;
 }
 
 /* Widgets */
 section {
-  background: lightgray;
+  background: rgba(0, 0, 0, 0.75);
   padding: 1em;
   
   /* Relative Parent. Absolute Child */
@@ -18,6 +34,16 @@ section {
 
 /* Time */
 .time {
+  grid-column-start: 1;
+  grid-row-start: 1;
+  grid-row-end: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 900;
+  font-size: 2em;
+  color: limegreen;
 }
 
 .hours {
@@ -34,8 +60,17 @@ section {
 }
 
 /* Date */
-.date {
-  
+.date {  
+  display: flex;
+  grid-column-start: 1;
+  grid-row-start: 2;
+  grid-row-end: 2;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 900;
+  font-size: 2em;
+  color: limegreen;
 }
 
 .month {
@@ -52,6 +87,16 @@ section {
 
 /* Weather */
 .weather {
+  display: flex;
+  grid-column-start: 1;
+  grid-row-start: 3;
+  grid-row-end: 3;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 900;
+  font-size: 2em;
+  color: limegreen;
   
 }
 
@@ -66,3 +111,19 @@ section {
 .weather img {
   
 }
+
+video { 
+  /* Position video      */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    /* stack behind content     */
+    z-index: -1;
+    /* fill background with video    */
+  object-fit: cover;
+  object-position: center;
+  
+}
+
